--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@stromsky/react-animate-on-scroll": "^2.1.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "antd": "^5.5.2",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
